Fix checkbox alignment issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -92,7 +92,7 @@ form {
   width: 100%;
   input {
     display: block;
-    margin-left: 80px;
+    margin-left: 120px;
   } 
   span {
     display: block;
